bar charts and pie charts

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,11 @@
     <h2>
         Total Cases: {{cases}}, total deaths: {{deaths}}
     </h2>
+    <img src='../static/acc_new.png' alt='accumulated and new cases by date'>
+    <img src='../static/state_pie.png' alt='national distribution'>
+    <img src='../static/age.png' alt='distribution by age'>
+    <img src='../static/race.png' alt='distribution by race'>
+
     <h3>
         Click state to view the details:
     </h3>
