--- a/templates/state.html
+++ b/templates/state.html
@@ -9,6 +9,12 @@
             border-collapse: collapse;
             padding: 5px;
         }
+        th{
+            background-color: lightskyblue;
+            color:white;
+        }
+        tr:nth-child(even){background-color: #f2f2f2;}
+        tr:hover{background-color: #ddd;}
   </style>
   <script>
     function myFunction() {
