detailed page show accumulated/death in one figure

--- a/templates/state.html
+++ b/templates/state.html
@@ -19,13 +19,8 @@
   <script>
     function myFunction() {
       var x = document.getElementById("myImg");
-      x.src = "../static/{{nm}}.png";
+      x.src = "../static/{{nm}}1.png";
       x.style.display= 'block'
-        // if (x.style.display === "none") {
-        //     x.style.display = "block";
-        // } else {
-        //     x.style.display = "none";
-        // }
     }
   </script>
     
