--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Index</title>
+  <title>COVID19 in the US</title>
   <style>
         table, th, td {
             border: 1px solid black;
@@ -19,12 +19,13 @@
 </head>
 <body>
     <h1>
+        Cases of Coronavirus Disease (COVID-19) in the U.S. <br>
         Today is {{month}} {{day}}, {{year}}.
     </h1>
     <h2>
         Total Cases: {{cases}}, total deaths: {{deaths}}
     </h2>
-    <img src='../static/acc_new.png' alt='accumulated and new cases by date'>
+    <img src='../static/acc_new1.png' alt='accumulated and new cases by date'>
     <img src='../static/state_pie.png' alt='national distribution'>
     <img src='../static/age.png' alt='distribution by age'>
     <img src='../static/race.png' alt='distribution by race'>
