hide recovered data in state detail page

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     <h2>
         Total Cases: {{cases}}, total deaths: {{deaths}}
     </h2>
-    <img src='../static/acc_new1.png' alt='accumulated and new cases by date'>
+    <img src='../static/acc_new.png' alt='accumulated and new cases by date'>
     <img src='../static/state_pie.png' alt='national distribution'>
     <img src='../static/age.png' alt='distribution by age'>
     <img src='../static/race.png' alt='distribution by race'>
