unify title/legends format, add recovered as negative value in stacked bar chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
         Today is {{month}} {{day}}, {{year}}.
     </h1>
     <h2>
-        Total Cases: {{cases}}, total deaths: {{deaths}}
+        Total Cases: {{cases}}, total deaths: {{deaths}}.
     </h2>
     <img src='../static/acc_new.png' alt='accumulated and new cases by date'>
-    <img src='../static/state_pie.png' alt='national distribution'>
+    <img src='../static/states.png' alt='national distribution'>
     <img src='../static/age.png' alt='distribution by age'>
     <img src='../static/race.png' alt='distribution by race'>
 
@@ -63,9 +63,9 @@
             How many regions do you want to show:
             <input type="text" name='howmany' value='10' min='1' max='50'><br/>
         </p>
-        <input type='submit' value='Get Bars'/><br/>
+        <input type='submit' value='Get Results'/><br/>
     </form>
-
+                                                                                      
     <h3>
         Click state to view the details:
     </h3>
