--- a/templates/state.html
+++ b/templates/state.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>State {{nm}}</title>
+  <link rel="shortcut icon" href="">
   <style>
         table, th, td {
             border: 1px solid black;
