--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,42 @@
         .button3 {
             background-color: pink;
         }
+        /* Style the tab */
+        .tab {
+        overflow: hidden;
+        border: 1px solid #ccc;
+        background-color: #f1f1f1;
+        }
+
+        /* Style the buttons inside the tab */
+        .tab button {
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        transition: 0.3s;
+        font-size: 17px;
+        }
+
+        /* Change background color of buttons on hover */
+        .tab button:hover {
+        background-color: #ddd;
+        }
+
+        /* Create an active/current tablink class */
+        .tab button.active {
+        background-color: #ccc;
+        }
+
+        /* Style the tab content */
+        .tabcontent {
+        display: none;
+        padding: 6px 12px;
+        border: 1px solid #ccc;
+        border-top: none;
+        }
   </style>
   <script>
         function myFunc(img_src) {
@@ -46,6 +82,14 @@
         Cases of Coronavirus Disease (COVID-19) in the U.S. <br>
         Today is {{month}} {{day}}, {{year}}({{weekday}}).
     </h1>
+    
+    <div class="tab">
+        <button class="tablinks" onclick="openTab(event, 'home')" id="defaultOpen">Home</button>
+        <button class="tablinks" onclick="openTab(event, 'source')">Data Source</button>
+        <button class="tablinks" onclick="openTab(event, 'contact')">Contact me</button>
+    </div>
+
+    <div id="home" class="tabcontent">
     <h2>
         Total Cases: {{cases}}, total deaths: {{deaths}}.
     </h2>
@@ -111,5 +155,35 @@
     {% endif%}       
     {% endfor%}
     </table>
+    </div>
+
+    <div id='source' class='tabcontent'>
+        <p>Last updated date: {{last_updated_date}}</p>
+        <p>Data comes from <a href='https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/cases-in-us.html' target='_blank'>CDC website</a> 
+            and <a href='https://rapidapi.com/KishCom/api/covid-19-coronavirus-statistics/details' target='_blank'>Johns Hopkins University API</a>.</p>
+    </div>
+    <div id='contact' class='tabcontent'>
+        <p>Open source code in <a href='https://github.com/chyuting/covid19Tracker' target='_blank'>Github repo</a>.</p>
+    </div>
+
+
+    <script>
+        function openTab(evt, tabName) {
+          var i, tabcontent, tablinks;
+          tabcontent = document.getElementsByClassName("tabcontent");
+          for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+          }
+          tablinks = document.getElementsByClassName("tablinks");
+          for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
+          }
+          document.getElementById(tabName).style.display = "block";
+          evt.currentTarget.className += " active";
+        }
+        
+        // Get the element with id="defaultOpen" and click on it
+        document.getElementById("defaultOpen").click();
+    </script>
 </body>
 </html>
