--- a/templates/results.html
+++ b/templates/results.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="favicon-32x32.png" type="image/png">
   <title>Filtered results</title>
 </head>
 <body>
