--- a/templates/state.html
+++ b/templates/state.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
   <title>State {{nm}}</title>
-  <link rel="shortcut icon" href="">
-  <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-            padding: 5px;
-        }
-        th{
-            background-color: lightskyblue;
-            color:white;
-        }
-        tr:nth-child(even){background-color: #f2f2f2;}
-        tr:hover{background-color: #ddd;}
-  </style>
+  <link rel="icon" type="image/png" href="favicon-32x32.png" type="image/png">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <script>
     function myFunction() {
       var x = document.getElementById("myImg");
